selfhost/test/typechecker/accessor/error_static_member_referenced_by_instance.abra
type Foo { 
  str: String

  func foo(self, s = self.str): String = self.str + s
  func fooStatic(f: Foo, s = f.str): String = f.str + s
}
var f: Foo

val fn1 = f.foo
val _: () => String = fn1

val fn2 = f.fooStatic
val _: () => String = fn2
